# wechat-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.bat
bot/: __init__.py
bot/admin/: __init__.py  commands.py  manager.py
bot/config/: __init__.py  loader.py  settings.py
bot/core/: __init__.py  app.py  bot.py  event_bus.py  exceptions.py  sender.py
bot/db/: __init__.py  manager.py  repository.py
bot/group/: __init__.py  cache.py  filter.py  monitor.py
bot/handlers/: __init__.py  base.py  group_message.py  pipeline.py  private_message.py  registry.py  system_event.py
bot/scheduler/: __init__.py  manager.py
bot/utils/: __init__.py  logger.py  rate_limit.py  retry.py
bot/wcf/: __init__.py  client.py  mock_client.py  models.py
bot/webhook/: __init__.py  middleware.py  routes.py  server.py
deploy/: install_service.sh  supervisord.conf
docs/: requirements.md  windows-deployment.md
tests/: conftest.py  test_at_mention.py  test_commands.py  test_config.py  test_event_bus.py  test_group_filter.py  test_mock_client.py  test_models.py
